@@ -61,4 +61,6 @@ interface LMSLocationManagerInterface
     public function GetZipCode(array $params);
 
     public function GetCitiesWithSections();
+
+    public function getCountryCodeById($countryid);
 }
