@@ -40,15 +40,6 @@ function check_ssn($ssn)
     return true;
 }
 
-function check_zip($zip)
-{
-    if (ConfigHelper::checkConfig('phpui.skip_zip_validation')) {
-        return true;
-    } else {
-        return preg_match('/^[0-9]{5}$|^[0-9]{5}-[0-9]{4}$/', $zip);
-    }
-}
-
 function check_regon($regon) // business registration number
 {
     return true;
