@@ -139,7 +139,7 @@ if (!isset($_POST['xjxfun'])) {
                     $customerdata['addresses'][ $k ]['show'] = true;
                 }
 
-                if ($v['location_zip'] && !check_zip($v['location_zip'])) {
+                if ($v['location_zip'] && !Utils::checkZip($v['location_zip'], $v['location_country_id'])) {
                     $error['customerdata[addresses][' . $k . '][location_zip]'] = trans('Incorrect ZIP code!');
                     $customerdata['addresses'][ $k ]['show'] = true;
                 }
